--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.7",
+    "@types/rimraf": "^3.0.0",
     "@types/uuid": "^8.3.0",
     "eslint": "^7.11.0",
     "ts-node": "^9.0.0",
@@ -23,6 +24,7 @@
     "@octokit/rest": "^18.0.6",
     "node-fetch": "^2.6.1",
     "node-html-parser": "^1.3.1",
+    "rimraf": "^3.0.2",
     "simple-git": "^2.21.0",
     "uuid": "^8.3.1"
   }
