--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "ts-node src/index.ts"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/node-fetch": "^2.5.7",
     "@types/rimraf": "^3.0.0",
     "@types/uuid": "^8.3.0",
