--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@octokit/rest": "^18.0.6",
+    "js-base64": "^3.5.2",
     "node-fetch": "^2.6.1",
     "node-html-parser": "^1.3.1",
     "rimraf": "^3.0.2",
