--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "git@github.com:tim-ings/GitActivitySync.git",
   "author": "Tim Ings",
   "license": "GPL3",
+  "type": "module",
   "private": true,
   "scripts": {
     "validate": "tsc --noEmit",
@@ -19,6 +20,7 @@
     "@types/uuid": "^8.3.0",
     "eslint": "^7.11.0",
     "ts-node": "^9.0.0",
+    "tslib": "^2.0.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
