--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ES2020",
     "strict": true,
     "baseUrl": "src",
     "outDir": "dist",
@@ -9,10 +9,12 @@
     "sourceMap": true,
     "removeComments": true,
     "experimentalDecorators": true,
-    "target": "ESNext",
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2020",
     "emitDecoratorMetadata": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "lib": ["ES2020"],
     "types": [
       "node",
       "jest"
