--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "repository": "git@github.com:tim-ings/GitActivitySync.git",
   "author": "Tim Ings",
   "license": "GPL3",
-  "type": "module",
   "private": true,
   "scripts": {
     "validate": "tsc --noEmit",
@@ -14,7 +13,7 @@
     "start": "ts-node src/index.ts"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
+    "@tsconfig/node12": "^1.0.7",
     "@types/node-fetch": "^2.5.7",
     "@types/rimraf": "^3.0.0",
     "@types/uuid": "^8.3.0",
