Fixes git via ssh

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,10 @@
 version: '3'
 
 services:
-  citsbot:
+  git-activity-sync:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+      target: prod
     container_name: git-activity-sync
-    image: ghcr.io/tim-ings/git-activity-sync:latest
-    env_file: /home/tim/envs/git-activity-sync/.env
+    env_file: .env
