--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "GitActivitySync",
+  "name": "git-activity-sync",
   "version": "1.0.0",
   "main": "index.ts",
-  "repository": "git@github.com:tim-ings/GitActivitySync.git",
+  "repository": "git@github.com:tim-ings/git-activity-sync.git",
   "author": "Tim Ings",
   "license": "GPL3",
   "private": true,
@@ -15,7 +15,6 @@
   "devDependencies": {
     "@tsconfig/node12": "^1.0.7",
     "@types/node-fetch": "^2.5.7",
-    "@types/rimraf": "^3.0.0",
     "@types/uuid": "^8.3.0",
     "eslint": "^7.11.0",
     "ts-node": "^9.0.0",
@@ -23,11 +22,8 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@octokit/rest": "^18.0.6",
-    "js-base64": "^3.5.2",
     "node-fetch": "^2.6.1",
     "node-html-parser": "^1.3.1",
-    "rimraf": "^3.0.2",
     "simple-git": "^2.21.0",
     "uuid": "^8.3.1"
   }
