--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: ci
+name: build
 
 on: 
   push:
@@ -22,7 +22,7 @@ jobs:
       uses: docker/login-action@v1 
       with:
         registry: ghcr.io
-        username: ${{ github.repository_owner }}
+        username: ${{ secrets.CR_USER }}
         password: ${{ secrets.CR_PAT }}
 
     - name: Build and push
