--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: build
+name: Build
 
 on:
   push:
@@ -9,27 +9,31 @@ jobs:
   build:
     name: Build and Push to GitHub Registry
     timeout-minutes: 10
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
-    - name: Checkout git repository
-      uses: actions/checkout@v2
+      - name: Checkout git repository
+        uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v1 
-      with:
-        registry: ghcr.io
-        username: ${{ secrets.CR_USER }}
-        password: ${{ secrets.CR_PAT }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.CR_USER }}
+          password: ${{ secrets.CR_PAT }}
 
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        target: prod
-        tags: ghcr.io/tim-ings/git-activity-sync:latest
+      - name: Parse tagged version
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF:11}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          target: prod
+          tags: ghcr.io/tim-ings/git-activity-sync:${{ steps.vars.outputs.tag }}
