--- a/helm/git-activity-sync/templates/secrets.yaml
+++ b/helm/git-activity-sync/templates/secrets.yaml
@@ -1,10 +1,10 @@
 apiVersion: kubernetes-client.io/v1
 kind: ExternalSecret
 metadata:
-  name: git-activity-sync
+  name: {{ .Chart.Name }}
 spec:
   backendType: secretsManager
   data:
     - key: {{ .Values.secrets.config }}
       name: deploy-key
-      property: deployKey
+      property: projects.gitActivitySync.deployKey
