--- a/helm/git-activity-sync/templates/cronjob.yaml
+++ b/helm/git-activity-sync/templates/cronjob.yaml
@@ -1,15 +1,15 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: git-activity-sync
+  name: {{ .Chart.Name }}
 spec:
-  schedule: "0 0 * * *"
+  schedule: {{ $.Values.schedule }}
   jobTemplate:
     spec:
       template:
         spec:
           containers:
-            - name: git-activity-sync
+            - name: {{ .Chart.Name }}
               image: {{ $.Values.image }}
               imagePullPolicy: Always
               env:
@@ -26,6 +26,6 @@ spec:
                 - name: DEPLOY_KEY
                   valueFrom:
                     secretKeyRef:
-                      name: git-activity-sync
+                      name: {{ .Chart.Name }}
                       key: deploy-key
           restartPolicy: OnFailure
